--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ DATABASE_URL=postgresql://postgres:161819lpB@localhost:5432/estoque_db?schema=pu
 
 
 # Chave secreta (gere uma aleatória forte, pode ser qualquer string longa)
-HASH_SALT=1234567890abcdef
+HASH_SALT=K1nG-YaMpI-2026-S3Cr3T0-@bCd3Fgh1JkLmN0pQ
 
 # Outras variáveis opcionais (deixe como está ou ajuste)
 DISABLE_AUTH=false
