--- a/.env.local
+++ b/.env.local
@@ -7,3 +7,5 @@ HASH_SALT=K1nG-YaMpI-2026-S3Cr3T0-@bCd3Fgh1JkLmN0pQ
 
 # Outras variáveis opcionais (deixe como está ou ajuste)
 DISABLE_AUTH=false
+
+DISABLE_TELEMETRY=true
