Change DISABLE_AUTH to true in .env.local

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,6 @@ DATABASE_URL=postgresql://postgres:161819lpB@localhost:5432/estoque_db?schema=pu
 HASH_SALT=K1nG-YaMpI-2026-S3Cr3T0-@bCd3Fgh1JkLmN0pQ
 
 # Outras variáveis opcionais (deixe como está ou ajuste)
-DISABLE_AUTH=false
+DISABLE_AUTH=true
 
 DISABLE_TELEMETRY=true
