adicionando rota sync Umami

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "gestão de estoque com métricas Facebook e Yampi",
   "private": true,
+  "type": "module",
   "workspaces": [
     "apps/*"
   ],
@@ -12,10 +13,24 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["pdv", "estoque", "saas", "nodejs", "react"],
+  "keywords": [
+    "pdv",
+    "estoque",
+    "saas",
+    "nodejs",
+    "react"
+  ],
   "author": "King",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^9.0.1"
+    "concurrently": "^9.0.1",
+    "prisma": "^7.3.0"
+  },
+  "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "axios": "^1.13.5",
+    "node-cron": "^4.2.1",
+    "pg": "^8.18.0"
   }
 }
